[tool.poetry]
name = "fastapi-lms"
version = "0.1.0"
description = ""
authors = ["ferrary7 <ary7sharma@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_lms"}]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.22.0"
fastapi = "^0.99.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
